Fix HTML formatting and update footer links

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
         </div>
       </div>
       <div class="footer__bar">
-        Copyright © 2025 tech4webs. All rights reserved.
+        Copyright © 2025 <a herf="https://tech4webs.vercel.app/">Tech4webs</a>. All rights reserved.
       </div>
     </footer>
 
@@ -285,3 +285,4 @@
     <script src="main.js"></script>
   </body>
 </html>
+
