--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
         </div>
       </div>
       <div class="footer__bar">
-        Copyright © 2025 <a href="https://tech4webs.vercel.app/">Tech4webs</a>. All rights reserved.
+        Copyright © 2025 <a href="#">Aaditya Chhatraliya</a>. All rights reserved.
       </div>
     </footer>
 
@@ -285,5 +285,6 @@
     <script src="main.js"></script>
   </body>
 </html>
+
 
 
